--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,18 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Meraki Gold</title>
 
      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
-  <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
+  <link href="%PUBLIC_URL%/assets/css/nucleo-icons.css" rel="stylesheet" />
+  <link href="%PUBLIC_URL%/assets/css/nucleo-svg.css" rel="stylesheet" />
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="./assets/css/material-dashboard.css?v=3.0.2" rel="stylesheet" />
+  <link id="pagestyle" href="%PUBLIC_URL%/assets/css/material-dashboard.css?v=3.0.2" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -51,10 +51,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-    <script src="./assets/js/material-dashboard.min.js?v=3.0.2"></script>
-      <script src="./assets/js/core/popper.min.js"></script>
-  <script src="./assets/js/core/bootstrap.min.js"></script>
-  <script src="./assets/js/plugins/perfect-scrollbar.min.js"></script>
-  <script src="./assets/js/plugins/smooth-scrollbar.min.js"></script>
-  <script src="./assets/js/plugins/chartjs.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/material-dashboard.min.js?v=3.0.2"></script>
+      <script src="%PUBLIC_URL%/assets/js/core/popper.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/core/bootstrap.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/plugins/perfect-scrollbar.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/plugins/smooth-scrollbar.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/plugins/chartjs.min.js"></script>
 </html>
